--- a/issuestatus.html
+++ b/issuestatus.html
@@ -12,13 +12,22 @@ That theme can be found at /home/woopie/webapps/demostatic//themes/plainsans/loo
 
      index is 3looping through articles in this issue
 
-     index is 4
-article index size is 5
+     index is 4looping through articles in this issue
+
+     index is 5
+article index size is 6
 Next article to process will be : index.html
+
+Processing issue cover: 
+
+next article is: feature_2977.html|About the Author
+	Done generating issue cover: 
+
+Next article to process will be : _2977.html
 
 
 Processing issue feature
-prev article is 
+prev article is index.html|Cover
 next article is feature_2978.html|Silent No Longer
 cover link is index.html	Done generating feature: 
 
@@ -26,7 +35,7 @@ Next article to process will be : _2978.html
 
 
 Processing issue feature
-prev article is index.html|About the Author
+prev article is feature_2977.html|About the Author
 next article is feature_2979.html|Eye Witness Accounts
 cover link is index.html	Done generating feature: 
 
