--- a/issuestatus.html
+++ b/issuestatus.html
@@ -1,6 +1,6 @@
 here's some debug information about your new issue we've generated:
 
-This is for publication My Magazine
+This is for publication High Notes Club
 This set of issues will be themed plainsans
 That theme can be found at /home/woopie/webapps/demostatic//themes/plainsans/looping through articles in this issue
 
