--- a/feature_2979.html
+++ b/feature_2979.html
@@ -85,7 +85,7 @@
     </nav>
     <!-- END top bar navigation //-->
     
-    <h1 id="top-title">My Magazine</h1>
+    <h1 id="top-title">High Notes Club</h1>
     
     <!-- START top social navigation //-->
     <nav id="top-social" class="button-links">
