--- a/inc/toc.html
+++ b/inc/toc.html
@@ -1,7 +1,8 @@
 <ol><li id="tocdep001"><ol>
 	<li id='tocart0' class='thumb-side'><a href='index.html'><div><h3>Cover</h3><p>Cover</p></div></a></li>
-	<li id='tocart1' class='thumb-side'><a href='feature_2977.html'><div><h3>About the Author</h3><p> </p></div></a></li>
-	<li id='tocart2' class='thumb-side'><a href='feature_2978.html'><div><h3>Silent No Longer</h3><p> </p></div></a></li>
-	<li id='tocart3' class='thumb-side'><a href='feature_2979.html'><div><h3>Eye Witness Accounts</h3><p> </p></div></a></li>
-	<li id='tocart4' class='thumb-side'><a href='feature_2980.html'><div><h3>Two Kinds of Messages</h3><p> </p></div></a></li>
-	<li id='tocart5' class='thumb-side'><a href='feature_2981.html'><div><h3>How the Messages work</h3><p> </p></div></a></li></ol></li></ol>
+	<li id='tocart1' class='thumb-side'><a href='introduction_2983.html'><div><h3>Chapter One</h3><p></p></div></a></li>
+	<li id='tocart2' class='thumb-side'><a href='feature_2977.html'><div><h3>About the Author</h3><p> </p></div></a></li>
+	<li id='tocart3' class='thumb-side'><a href='feature_2978.html'><div><h3>Silent No Longer</h3><p> </p></div></a></li>
+	<li id='tocart4' class='thumb-side'><a href='feature_2979.html'><div><h3>Eye Witness Accounts</h3><p> </p></div></a></li>
+	<li id='tocart5' class='thumb-side'><a href='feature_2980.html'><div><h3>Two Kinds of Messages</h3><p> </p></div></a></li>
+	<li id='tocart6' class='thumb-side'><a href='feature_2981.html'><div><h3>How the Messages work</h3><p> </p></div></a></li></ol></li></ol>
