--- a/issuestatus.html
+++ b/issuestatus.html
@@ -14,20 +14,27 @@ That theme can be found at /home/woopie/webapps/demostatic//themes/plainsans/loo
 
      index is 4looping through articles in this issue
 
-     index is 5
-article index size is 6
+     index is 5looping through articles in this issue
+
+     index is 6
+article index size is 7
 Next article to process will be : index.html
 
 Processing issue cover: 
 
-next article is: feature_2977.html|About the Author
+next article is: introduction_2983.html|Chapter One
 	Done generating issue cover: 
+
+Next article to process will be : _2983.html
+Processing issue introduction: 
+
+	Done generating introduction: 
 
 Next article to process will be : _2977.html
 
 
 Processing issue feature
-prev article is index.html|Cover
+prev article is introduction_2983.html|Chapter One
 next article is feature_2978.html|Silent No Longer
 cover link is index.html	Done generating feature: 
 
